--- a/locales/de.json
+++ b/locales/de.json
@@ -1,14 +1,14 @@
 {
-  "noWallet": "Ethereum wallet nicht gefunden",
-  "wrongNetwork": "Du bist auf dem falschen Netzwerk",
-  "switchNetwork": "Bitte zu {{ correctNetwork }} wechseln",
-  "installWeb3MobileBrowser": "Bitte besuche uns mit einem mobilen Browser der web3 unterstützt, z.B. mit Trust Wallet oder Coinbase Wallet.",
-  "installMetamask": "Bitte besuche uns erneut nachdem du Metamask oder Brave installiert hast.",
+  "noWallet": "Keine Ethereum wallet gefunden",
+  "wrongNetwork": "Du bist auf dem falschen Netzwerk.",
+  "switchNetwork": "Bitte wechsle zum {{ correctNetwork }}",
+  "installWeb3MobileBrowser": "Bitte besuche uns mit einem web3-fähigen mobilen Browser wie z.B. Trust Wallet oder Coinbase Wallet.",
+  "installMetamask": "Bitte besuch uns erneut nachdem du Metamask oder Brave installiert hast.",
   "disconnected": "Nicht verbunden",
   "swap": "Tauschen",
   "send": "Senden",
   "pool": "Pool",
-  "betaWarning": "Dies ist ein experimenteller fork von uniswap.exchange. Nutzung auf eigene Gefahr!",
+  "betaWarning": "Dieses Projekt ist in beta. Nutzung auf eigenes Risiko.",
   "input": "Input",
   "output": "Output",
   "estimated": "geschätzt",
@@ -20,54 +20,58 @@
   "noExchange": "Exchange nicht gefunden",
   "exchangeRate": "Wechselkurs",
   "invertedRate": "Invertierter Wechselkurs",
-  "enterValueCont": "{{ missingCurrencyValue }} Wert eingeben um fortzufahren.",
-  "selectTokenCont": "Token auswählen zum Fortsetzen.",
+  "enterValueCont": "Wert {{ missingCurrencyValue }} eingeben um fortzufahren.",
+  "selectTokenCont": "Token auswählen um fortzufahren.",
   "noLiquidity": "Keine Liquidität.",
-  "unlockTokenCont": "Bitte Token freischalten um fortzufahren.",
-  "transactionDetails": "Transaktionsdetails",
+  "unlockTokenCont": "Token freischalten um fortzufahren.",
+  "transactionDetails": "Details der Transaktion",
+  "hideDetails": "Details ausblenden",
   "youAreSelling": "Du verkaufst",
   "orTransFail": "oder die Transaktion wird fehlschlagen.",
-  "youWillReceive": "Du wirst mindestens so viel bekommen",
+  "youWillReceive": "Du erhältst mindestens",
   "youAreBuying": "Du kaufst",
-  "itWillCost": "es wird maximal so viel kosten",
+  "itWillCost": "Es kostet höchstens",
   "insufficientBalance": "Guthaben ungenügend",
-  "inputNotValid": "Ungültiger Eingabewert",
-  "differentToken": "Es müssen unterschiedliche Tokens gewählt werden.",
-  "noRecipient": "Empfängeradresse eingeben.",
-  "invalidRecipient": "Bitte gültige Empfängeradresse eingeben.",
-  "recipientAddress": "Empfängeradresse",
+  "inputNotValid": "Eingabewert ungültig",
+  "differentToken": "Es müssen unterschiedliche Token sein.",
+  "noRecipient": "Empfängeradresse angeben.",
+  "invalidRecipient": "Bitte gib eine gültige Empfängeradresse an.",
+  "recipientAddress": "Adresse des Empfängers",
   "youAreSending": "Du schickst",
-  "willReceive": "du bekommst mindestens",
+  "willReceive": "erhält mindestens",
   "to": "zu",
   "addLiquidity": "Liquidität hinzufügen",
-  "deposit": "Deponieren",
-  "currentPoolSize": "Aktuelle Pool Grösse",
+  "deposit": "Depot",
+  "currentPoolSize": "Aktuelle Größe des Pools",
   "yourPoolShare": "Dein Anteil am Pool",
-  "noZero": "Wert darf nicht null sein.",
-  "mustBeETH": "Einer der Inputs muss ETH sein.",
-  "enterCurrencyOrLabelCont": "Währung {{ inputCurrency }} oder {{ label }} Wert eingeben um fortzufahren.",
+  "noZero": "Wert darf nicht Null sein.",
+  "mustBeETH": "Einer der Inputs muß ETH sein.",
+  "enterCurrencyOrLabelCont": "{{ inputCurrency }} oder {{ label }} Wert eingeben um fortzufahren.",
   "youAreAdding": "Du fügst zwischen",
   "and": "und",
-  "intoPool": "zum Liquiditätspool hinzu.",
+  "intoPool": "in den Liquiditätspool.",
   "outPool": "vom Liquiditätspool.",
   "youWillMint": "Du prägst",
   "liquidityTokens": "Liquiditätstokens.",
-  "totalSupplyIs": "Die totale Menge an Liquidätstokens ist aktuell",
-  "tokenWorth": "Zum gegenwärtigen Wechselkurs hat jeder Pool Token den Wert von",
-  "firstLiquidity": "Du bist der Erste der Liquidität hinzufügt!",
-  "initialExchangeRate": "Der anfängliche Wechselkurs wird gesetzt basierend auf deiner Einlage. Bitte schau dass deine ETH und {{ label }} Einlage den gleichen Wert haben (in fiat).",
+  "totalSupplyIs": "Die gesamte Anzahl Liquiditätstokens ist aktuell",
+  "youAreSettingExRate": "Du setzt den anfänglichen Wechselkurs auf",
+  "totalSupplyIs0": "Die gesamte Anzahl Liquiditätstokens ist aktuell 0.",
+  "tokenWorth": "Zum gegenwärtigen Wechselkurs ist jeder Pool Token so viel Wert",
+  "firstLiquidity": "Du bist die erste Person die Liquidität bereitstellt!",
+  "initialExchangeRate": "The initial exchange rate will be set based on your deposits. Please make sure that your ETH and {{ label }} deposits have the same fiat value.",
   "removeLiquidity": "Liquidität entfernen",
   "poolTokens": "Pool Tokens",
   "enterLabelCont": "{{ label }} Wert eingeben um fortzufahren.",
   "youAreRemoving": "Du entfernst zwischen",
-  "youWillRemove": "Du wirst",
+  "youWillRemove": "Du entfernst",
   "createExchange": "Exchange erstellen",
-  "invalidTokenAddress": "Token Adresse ungültig",
+  "invalidTokenAddress": "Ungültige Tokenadresse",
   "exchangeExists": "{{ label }} Exchange existiert bereits!",
-  "invalidSymbol": "Ungültiges symbol",
-  "invalidDecimals": "Ungültige Dezimalstellen",
-  "tokenAddress": "Token Adresse",
+  "invalidSymbol": "Symbol ungültig",
+  "invalidDecimals": "Dezimalstellen ungültig",
+  "tokenAddress": "Tokenadresse",
   "label": "Label",
   "decimals": "Dezimalstellen",
-  "enterTokenCont": "Token Adresse eingeben um fortzufahren"
+  "enterTokenCont": "Tokenadresse eingeben um fortzufahren",
+  "deadlineSetTo": "Deadline (timeout) gesetzt auf"
 }
