--- a/locales/en.json
+++ b/locales/en.json
@@ -6,9 +6,11 @@
   "installMetamask": "Please visit us after installing Metamask on Chrome or Brave.",
   "disconnected": "Disconnected",
   "swap": "Swap",
+  "swapAnyway": "Swap Anyway",
   "send": "Send",
+  "sendAnyway": "Send Anyway",
   "pool": "Pool",
-  "betaWarning": "This is an experimental fork of uniswap.exchange. Use at your own risk.",
+  "betaWarning": "This project is in beta. Use at your own risk.",
   "input": "Input",
   "output": "Output",
   "estimated": "estimated",
@@ -16,21 +18,27 @@
   "unlock": "Unlock",
   "pending": "Pending",
   "selectToken": "Select a token",
-  "searchOrPaste": "Search Token or Paste Address",
+  "searchOrPaste": "Search Token Name, Symbol, or Address",
+  "searchOrPasteMobile": "Name, Symbol, or Address",
   "noExchange": "No Exchange Found",
   "exchangeRate": "Exchange Rate",
   "invertedRate": "Inverted Rate",
+  "unknownError": "Oops! An unknown error occurred. Please refresh the page, or visit from another browser or device.",
   "enterValueCont": "Enter a {{ missingCurrencyValue }} value to continue.",
   "selectTokenCont": "Select a token to continue.",
   "noLiquidity": "No liquidity.",
+  "insufficientLiquidity": "Insufficient liquidity.",
   "unlockTokenCont": "Please unlock token to continue.",
-  "transactionDetails": "Transaction Details",
+  "transactionDetails": "Advanced Details",
   "hideDetails": "Hide Details",
+  "slippageWarning": "Slippage Warning",
+  "highSlippageWarning": "High Slippage Warning",
   "youAreSelling": "You are selling",
   "orTransFail": "or the transaction will fail.",
   "youWillReceive": "You will receive at least",
   "youAreBuying": "You are buying",
   "itWillCost": "It will cost at most",
+  "forAtMost": "for at most",
   "insufficientBalance": "Insufficient Balance",
   "inputNotValid": "Not a valid input value",
   "differentToken": "Must be different token.",
@@ -47,7 +55,7 @@
   "noZero": "Amount cannot be zero.",
   "mustBeETH": "One of the input must be ETH.",
   "enterCurrencyOrLabelCont": "Enter a {{ inputCurrency }} or {{ label }} value to continue.",
-  "youAreAdding": "You are adding between",
+  "youAreAdding": "You are adding",
   "and": "and",
   "intoPool": "into the liquidity pool.",
   "outPool": "from the liquidity pool.",
@@ -71,7 +79,10 @@
   "invalidDecimals": "Invalid decimals",
   "tokenAddress": "Token Address",
   "label": "Label",
+  "name": "Name",
+  "symbol": "Symbol",
   "decimals": "Decimals",
   "enterTokenCont": "Enter a token address to continue",
-  "deadlineSetTo": "Deadline set to"
+  "priceChange": "Expected price slippage",
+  "forAtLeast": "for at least "
 }
